# DinaSaurList-EmailUpdate

./: Email.json  README.md  UpdateRecord.json  env-Init.cmd  pyproject.toml  run&install.cmd  run.cmd
config-record/: record.json
src/: main.py
src/lib/: Email.py  UpdateExtract.py  UpdateRecord.py
