[project]
name = "email-update-tools"
version = "0.1.0"
description = "DinosaurList monthly update email pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
index-url = "https://usw2p-edge.packages.broadcom.net/artifactory/api/pypi/platform-pypi/simple"
allow-insecure-host = ["usw2p-edge.packages.broadcom.net"]
